<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableRow
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/heading"
            android:layout_width="403dp"
            android:layout_height="wrap_content"
            android:background="#F12323"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="#FFFFFF"
            android:textSize="32sp" />
    </TableRow>

    <TableRow
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/textMessage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/welcomeMessage"
            android:textColor="#F44336"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView

            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textSize="18sp"/>
    </TableRow>
    <TableRow
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

    </TableRow>
    <TableRow
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="Password" />
    </TableRow>
    <TableRow
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:layout_margin="10dp">
        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register" />
    </TableRow>

</LinearLayout>