<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="30sp"
        android:text="@string/welcome" />

    <TextView
        android:id="@+id/textName"
        android:layout_width = "match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:text="Inserisci il nome dell'azienda o luogo pubblico"/>
    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:textSize="18sp"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width = "match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:text="Descrizione dell'attività o del luogo pubblico"/>

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:textSize="18sp"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textPosition"
        android:layout_width = "match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:text="Acquisisci posizione"/>

    <EditText
        android:id="@+id/editPosition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:textSize="18sp"
        android:inputType="textEmailAddress" />
    <TextView
        android:id="@+id/textMail"
        android:layout_width = "match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:text="E-mail"/>
    <EditText
        android:id="@+id/editMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:textSize="18sp"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:text="Password" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/register" />
    <Button
        android:id="@+id/buttonAnnull"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/annull" />


</LinearLayout>